minor styling + dom-module added

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -15,7 +15,7 @@
                     <li><div id="hamburger-menu-btn"></div></li>
                     <li><span><a href="#">Inbox</a></span></li>
                     <li><span><button id="new-todo-nav-btn" class ="new-todo"></button></span></li>
-                    <li><span><a href="#">Today</a></span></li>
+                    <li><span><a href="#">Todo</a></span></li>
                 </ul>
             </nav>
       
