--- a/src/style.scss
+++ b/src/style.scss
@@ -75,6 +75,7 @@ body {
 }
 
 #nav {
+  background-color: rgba(255, 228, 196, 0.418);
   grid-row: 1;
   grid-column: 1 / -1;
   border: 1px solid grey;
@@ -83,11 +84,17 @@ body {
   padding: 0.5rem;
   ul {
   display: grid;
-  grid-template-columns: 50px 50px 10fr 30px 50px; 
+  grid-template-columns: 50px 50px 10fr 50px 50px; 
+  justify-content: center;
+  align-items: center;
+  font-family: monospace;
+  font-size: 14px;
+  padding: 0.8rem;
 }
   button {
     border: none;
-
+    background-color: none;
+    background: none;
   }
 }
 
@@ -99,12 +106,20 @@ body {
   grid-column: 2;
 }
 #nav > ul > li:nth-child(3) {
-  grid-column: 4;
+  grid-column: 5;
+}
+
+#nav > ul > li:nth-child(4) {
+  border-left: 1px solid grey;
+  padding-left: 10px;
+  grid-column: 3;
+  grid-row: 1;
 }
 
 ul, li, a {
   list-style-type: none;
   text-decoration: none;
+  color: black;
 }
 
 h2 {
@@ -112,6 +127,7 @@ h2 {
   font-family: monospace;
 }
 #sidebar {
+  background-color: rgba(151, 229, 216, 0.37);
   grid-row: 2;
   grid-column: 1;
   display: grid;
@@ -134,8 +150,8 @@ h2 {
   border: 1px solid grey;
 }
 
-
-#hamburger-menu-btn {
-  background-image: url(./134216_menu_lines_hamburger_icon.png);
-  background-color: blue;
+#hamburger-menu-btn > img,
+ #new-todo-nav-btn > img {
+  width: 30px;
+  filter: drop-shadow(rgb(250, 250, 250) 1px 1px 1px)
 }
