--- a/src/index.ejs
+++ b/src/index.ejs
@@ -25,6 +25,7 @@
                     <li><span><a href="#">Today</a></span></li>
                     <li><span><a href="#">Upcoming</a></span></li>
                     <h2>Projects</h2>
+                    <button id="new-project-btn"></button>
                     <li><span><a href="#">Personal</a></span></li>
                     <li><span><a href="#">Work</a></span></li>
                     <li><span><a href="#">High Priority</a></span></li>
@@ -35,10 +36,10 @@
             <div id="main-content">
 
                 <div id="week">
-
+                
+                </div>
                 <div id="todo-container">
                     
-                </div>
                 </div>
             </div>
     </div>
