--- a/src/index.ejs
+++ b/src/index.ejs
@@ -42,6 +42,30 @@
                     
                 </div>
             </div>
+            <div id="modal">
+                <form action="">
+               
+                    <button id="close-modal">X</button>
+                    <label for="title">title</label>
+                    <input type="text" placeholder="Task Name" name="title" id="title-input">
+                    <label for="description">Description</label>
+                    <input type="text" placeholder="Description" id="description-input">
+                    <label for="date">Date</label>
+                    <input type ="date" name="date" id="date">
+                    <div id="priority-btn">
+                        <select>
+                            <option id="Default" selected>Priority</option>
+                            <option id="green">Priority 1</option>
+                            <option id="orange">Priority 2</option>
+                            <option id="red">Priority 3</option>
+                        </select>
+
+                    </div>
+                    <label for="save-todo"></label>
+                    <input type="submit" id="save-todo" name="save-todo">
+                </form>
+
+            </div>
     </div>
 </body>
 </html>
