--- a/src/style/_nav.scss
+++ b/src/style/_nav.scss
@@ -1,8 +1,8 @@
 #nav {
-  background-color: rgba(255, 228, 196, 0.418);
+  background-color: #c4deff;
   grid-row: 1;
   grid-column: 1 / -1;
-  @include standardBorder;
+  // @include standardBorder;
   display: grid;
   align-items: center;
   padding: 0.5rem;
