--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -29,8 +29,8 @@ body {
   gap: 10px;
   grid-template-columns: 1fr 5fr;
   grid-template-rows: 1fr 14fr;
-  height: 98vh;
-  width: 98vw;
+  height: 100vh;
+  width: 100vw;
 }
 
 ul,
@@ -49,9 +49,15 @@ h2 {
   font-size: 18px;
   font-family: monospace;
 }
+
+button:hover,
+input:hover {
+  cursor: pointer
+}
+
 #sidebar {
   @include standardBorder;
-  background-color: rgba(151, 229, 216, 0.37);
+  // background-color: rgba(151, 229, 216, 0.37);
   grid-row: 2;
   grid-column: 1;
   display: grid;
