--- a/src/style/_main_content.scss
+++ b/src/style/_main_content.scss
@@ -1,15 +1,20 @@
 @import '_mixins_variables';
 
 #main-content {
-  @include standardBorder;
+  // @include standardBorder;
   grid-row: 2;
   grid-column: 2;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 10fr;
-  padding: 1rem 5rem 1rem 5rem;
+  padding: 3rem 5rem 3rem 5rem;
   gap: 0.5rem;
   width: 60%;
+  justify-self: center;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+
 }
 
 #week {
