--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -26,9 +26,8 @@ body {
 
 #wrapper {
   display: grid;
-  gap: 10px;
   grid-template-columns: 1fr 5fr;
-  grid-template-rows: 1fr 14fr;
+  grid-template-rows: 46px 14fr;
   height: 100vh;
   width: 100vw;
 }
@@ -50,20 +49,19 @@ h2 {
   font-family: monospace;
 }
 
-button:hover,
-input:hover {
+button:hover {
   cursor: pointer
 }
 
 #sidebar {
-  @include standardBorder;
-  // background-color: rgba(151, 229, 216, 0.37);
+  // @include standardBorder;
+  background-color: rgba(128, 255, 234, 0.048);
   grid-row: 2;
   grid-column: 1;
   display: grid;
   grid-template-columns: 1fr;
   padding: 1.5rem;
-  min-width: 120px;
+  min-width: 230px;
   ul {
     display: grid;
     gap: 20px;
