--- a/src/index.ejs
+++ b/src/index.ejs
@@ -22,25 +22,25 @@
       
             <div id="sidebar">
                 <ul>
-                    <li><span><a href="#">Today</a></span></li>
-                    <li><span><a href="#">Upcoming</a></span></li>
-                    <h2>Projects</h2>
+                    <li id="today"><span><a href="#">Today</a></span></li>
+                    <li id="upcoming"><span><a href="#">Upcoming</a></span></li>
+    
+
+                    </ul>
+                    <ul id="projects">
+                        <span id="projects-title" class="button">
+                            <h2>Projects</h2>
+                        </span>
                     <button id="new-project-btn"></button>
-                    <li><span><a href="#">Personal</a></span></li>
-                    <li><span><a href="#">Work</a></span></li>
-                    <li><span><a href="#">High Priority</a></span></li>
+                    <li id="personal-sidebar"><span><a href="#">Personal</a></span></li>
+                    <li id="work-sidebar"><span><a href="#">Work</a></span></li>
+                    <li id="high-pri-sidebar"><span><a href="#">High Priority</a></span></li>
                 </ul>
             </div>
       
    
             <div id="main-content">
 
-                <div id="week">
-                
-                </div>
-                <div id="todo-container">
-                    
-                </div>
             </div>
             <div id="modal" class="hidden">
             
