--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -10,7 +10,6 @@
 @import '_nav';
 
 body {
-  @include standardBorder;
   background-color: $body-colour;
   display: grid;
   justify-content: center;
@@ -21,7 +20,7 @@ body {
   width: 100vw;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 #wrapper {
@@ -49,7 +48,7 @@ h2 {
   font-family: monospace;
 }
 
-button:hover {
+button:hover, .button:hover {
   cursor: pointer
 }
 
@@ -60,12 +59,15 @@ button:hover {
   grid-column: 1;
   display: grid;
   grid-template-columns: 1fr;
+  grid-template-rows: 100px 1fr;
   padding: 1.5rem;
   min-width: 230px;
+
   ul {
     display: grid;
     gap: 20px;
     height: fit-content;
+    align-self: flex-start;
   }
   ul > li {
     border-bottom: 1px solid $border-colour;
@@ -79,9 +81,9 @@ button:hover {
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    margin-top: 70px;
     // margin-left: 100px;
     justify-self: end;
+    align-self: flex-start;
     background: none;
   }
 }
@@ -91,4 +93,11 @@ button:hover {
 #new-project-btn > img {
   width: 30px;
   filter: drop-shadow(rgb(250, 250, 250) 1px 1px 1px);
+}
+
+.active-page  {
+  @include standardBorder;
+
+  height: 100%;
+  width: 100%;
 }
