minor bug fix todo

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -32,9 +32,11 @@
                             <h2>Projects</h2>
                         </span>
                     <button id="new-project-btn"></button>
-                    <li id="personal-sidebar"><span><a href="#">Personal</a></span></li>
-                    <li id="work-sidebar"><span><a href="#">Work</a></span></li>
-                    <li id="high-pri-sidebar"><span><a href="#">High Priority</a></span></li>
+                    <ul id="project-list">    
+                        <li id="personal-sidebar"><span><a href="#">Personal</a></span></li>
+                        <li id="work-sidebar"><span><a href="#">Work</a></span></li>
+                        <li id="high-pri-sidebar"><span><a href="#">High Priority</a></span></li>
+                    </ul>
                 </ul>
             </div>
       
