todo and project change

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -53,6 +53,15 @@
                     <input type="text" placeholder="Description" id="description-input">
                     <label for="date">Date</label>
                     <input type ="date" name="date" id="date">
+                    <div id="project-btn">
+                        <select id="project-selection">
+                            <option id="project-default" selected>Project</option>
+                            <option id="personal">Personal</option>
+                            <option id="work">Work</option>
+                            <option id="high_priority">High Priority</option>
+                        </select>
+
+                    </div>
                     <div id="priority-btn">
                         <select id="priority">
                             <option id="Default" selected>Priority</option>
