--- a/src/style/_new_todo_modal.scss
+++ b/src/style/_new_todo_modal.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     background-color: white;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     grid-row: repeat(6, 1fr);
     justify-content: center;
     align-items: center;
@@ -78,16 +78,9 @@ label  {
 
 #modal > #priority-btn  {
     grid-row: 6;
-    grid-column: 2;
+    grid-column: 3;
     justify-self: flex-end;
-    select {
-        padding: 8px;
-        border-radius: 5px;
-        border: $border-colour 1px solid;
-        font-family: monospace;
-        color:rgb(83, 83, 83);
-        cursor: pointer;
-    }
+
     
     :nth-child(1) {
         background-color: rgb(239, 241, 243);
@@ -102,11 +95,24 @@ label  {
         background-color: rgb(241, 132, 132);
     }
 }
+select {
+    padding: 8px;
+    border-radius: 5px;
+    border: $border-colour 1px solid;
+    font-family: monospace;
+    color:rgb(83, 83, 83);
+    cursor: pointer;
+    width: 130px;
+}
+#project-btn {
+    grid-column: 2;
+    grid-row: 6;
+}
 
 #modal  > #save-todo,
 #save-project {
     grid-row: 6;
-    grid-column: 3;
+    grid-column: 4;
     border: 1px solid $body-colour;
     border-radius: 5px;
     width: 80%;
