--- a/src/style/_todo_container.scss
+++ b/src/style/_todo_container.scss
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: start;
     height: fit-content;
-    gap: 10px;
+
     padding: 2rem;
     width: 100%;
 }
@@ -26,7 +26,7 @@
 
 .new-todo-div {
     display: grid;
-    grid-template-columns: 48px 1fr 1fr 25px;
+    grid-template-columns: 20px 48px 1fr 1fr 25px;
     grid-template-rows: 1fr 1fr;    
     padding: 0.2rem;
     align-items: center;
@@ -46,20 +46,20 @@
 }
 
 #display-title {
+    grid-row: 1;
+    grid-column: 3;
     font-size: 16px;
-    font-family: monospace;
+    color: rgb(48, 47, 47);
+    font-family: monospace !important;
 }
 #display-description {
     color: rgb(88, 88, 88);
     font-size: 11px;
     font-family: monospace;
     grid-row: 2;
-    grid-column: 2;
+    grid-column: 3;
 }
-input[type="checkbox"] {
-    height: 24px;
-    width: 24px;
-}
+
 
 #new-todo-div > span::before {
     content: "Due";
@@ -68,11 +68,77 @@ input[type="checkbox"] {
 
 #delete-todo {
     grid-row: 1;
-    grid-column: 4;  
+    grid-column: 5;  
     display: flex;
     justify-self: end;
     border-radius: 5px;
     color: grey;
     border: none;
     background: white;
+    text-align: right;
+    padding: 0;
 }
+
+#date { 
+grid-row: 1;
+    grid-column: 4;
+    button {
+        font-family: monospace;
+        font-size: 12px;
+    }   
+}
+
+#pri-element {
+    grid-row: 2;
+    grid-column: 5;
+    justify-self: flex-end;
+    align-self: center;
+    font-family: monospace;
+    color: rgb(148, 144, 144);
+}
+
+.green::after,
+.orange::after,
+.red::after {
+    padding: 0;
+    display: flex;
+    content: ' ';
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    z-index: -5;
+}
+
+.green::after {
+    background-color: rgba(128, 252, 128, 0.493);
+}
+
+.orange::after {
+    background-color: rgb(255, 202, 103);
+}
+
+.red::after { 
+    background-color: rgba(253, 104, 104, 0.699);  
+}
+#proj-element {
+    grid-row: 2;
+    grid-column: 4;
+    font-family: monospace;
+    color: gray;
+    justify-self: flex-end;
+}
+#checkbox {
+    width:25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 1px solid rgba(117, 117, 247, 0.678);
+    appearance: none;
+    -webkit-appearance: none;
+    outline: none;
+    cursor: pointer;
+  }
+  #checkbox:checked {
+    appearance: none;
+    clip-path: circle(50% at 50% 50%);
+    background-color: rgba(117, 117, 247, 0.678)  !important;
+  }
