sidebar toggle functions add complete, upcoming, today

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -33,9 +33,9 @@
                         </span>
                     <button id="new-project-btn"></button>
                     <ul id="project-list">    
-                        <li id="personal-sidebar"><span><a href="#">Personal</a></span></li>
-                        <li id="work-sidebar"><span><a href="#">Work</a></span></li>
-                        <li id="high-pri-sidebar"><span><a href="#">High Priority</a></span></li>
+                        <li id="personal"><span><a href="#">Personal</a></span></li>
+                        <li id="work"><span><a href="#">Work</a></span></li>
+                        <li id="high-priority"><span><a href="#">High Priority</a></span></li>
                     </ul>
                 </ul>
             </div>
@@ -43,7 +43,11 @@
    
             <div id="main-content">
                 <div id="todo-container">
-                    <ul id="todo-list"></ul>
+                    <ul id="todo-list">
+                        <li class="todo-item">
+
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div id="modal" class="modal hidden">
