--- a/src/index.ejs
+++ b/src/index.ejs
@@ -33,16 +33,19 @@
                         </span>
                     <button id="new-project-btn"></button>
                     <ul id="project-list">    
-                        <li id="personal"><span><a href="#">Personal</a></span></li>
-                        <li id="work"><span><a href="#">Work</a></span></li>
-                        <li id="high-priority"><span><a href="#">High Priority</a></span></li>
+                        <li><span><a href="#" class="personal">Personal</a></span></li>
+                        <li><span><a href="#" class="work">Work</a></span></li>
+                        <li><span><a href="#" class="high_priority">High Priority</a></span></li>
                     </ul>
                 </ul>
             </div>
       
    
             <div id="main-content">
+                <div id="week">
+                </div>
                 <div id="todo-container">
+            
                     <ul id="todo-list">
                         <li class="todo-item">
 
