--- a/src/index.ejs
+++ b/src/index.ejs
@@ -85,13 +85,15 @@
             </div>
        
             <div id="project-modal" class="modal hidden">
-                <button id="close-project-modal" class="close-modal">X</button>
-                <label for="title">Title</label>
-                <input type="text" placeholder="Project Name" name="title" id="project-title">
-                <label for="description">Description</label>
-                <input type="text" placeholder="Description" id="project-description">
-                <label for="save-project"></label>
-                <input type="submit" id="save-project" name="save-project" class="save">
+                <form action="">
+                    <button id="close-project-modal" class="close-modal">X</button>
+                    <label for="title">Title</label>
+                    <input type="text" placeholder="Project Name" name="title" id="project-title">
+                    <label for="description">Description</label>
+                    <input type="text" placeholder="Description" id="project-description">
+                    <label for="save-project"></label>
+                    <input type="submit" id="save-project" name="save-project" class="save">
+            </form>
             </div>
     </div>
 </body>
