--- a/src/index.ejs
+++ b/src/index.ejs
@@ -12,7 +12,7 @@
        
             <nav id="nav"> 
                 <ul>
-                    <li><div id="hamburger-menu-btn"></div></li>
+                    <li><span><button id="hamburger-menu-btn"></button></span></li>
                     <li><span><a href="#">Inbox</a></span></li>
                     <li><span><button id="new-todo-nav-btn" class ="new-todo"></button></span></li>
                     <li><span><a href="#">Todo</a></span></li>
