delete localstorage fix

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -13,9 +13,9 @@
             <nav id="nav"> 
                 <ul>
                     <li><span><button id="hamburger-menu-btn"></button></span></li>
-                    <li><span><a href="#">Inbox</a></span></li>
+                
                     <li><span><button id="new-todo-nav-btn" class ="new-todo"></button></span></li>
-                    <li><span><a href="#">Todo</a></span></li>
+                    <li><span><a href="#">Add Todo</a></span></li>
                 </ul>
             </nav>
       
