--- a/src/style/_nav.scss
+++ b/src/style/_nav.scss
@@ -2,15 +2,14 @@
   background-color: #ffffff33;
   grid-row: 1;
   grid-column: 1 / -1;
-  // @include standardBorder;
   border-bottom: 1px solid $border-colour;
   display: grid;
   align-items: center;
-  padding: 0.5rem;
-  height: 30px;
+  padding: 0.5rem 0 0.5rem 0;
+  height: 35px;
   ul {
     display: grid;
-    grid-template-columns: 50px 50px 10fr 50px 50px;
+    grid-template-columns: 60px 50px 10fr 150px 50px;
     justify-content: center;
     align-items: center;
     font-family: monospace;
@@ -25,21 +24,30 @@
   }
 }
 
+#new-todo-nav-btn > img,
+#new-project-btn > img {
+  width: 30px;
+  }
+
+
+#hamburger-menu-btn > img {
+  width: 40px;
+  
+}
+
 #nav > ul > li:nth-child(1) {
   grid-column: 1;
 }
 
 #nav > ul > li:nth-child(2) {
-  grid-column: 2;
-}
-#nav > ul > li:nth-child(3) {
   grid-column: 5;
   justify-self: flex-end;
 }
 
-#nav > ul > li:nth-child(4) {
-  border-left: 1px solid grey;
-  padding-left: 10px;
-  grid-column: 3;
+#nav > ul > li:nth-child(3) {
+  grid-column: 4;
   grid-row: 1;
+  justify-self: flex-end;
 }
+
+
