--- a/src/style/_todo_container.scss
+++ b/src/style/_todo_container.scss
@@ -88,7 +88,6 @@ grid-row: 1;
     grid-row: 2;
     grid-column: 6;
     justify-self: flex-end;
-    align-self: center;
     font-family: monospace;
     color: rgb(148, 144, 144);
 
@@ -98,7 +97,10 @@ grid-row: 1;
 .orange::after,
 .red::after {
     padding: 0;
+    position: inherit;
+    top: 0;
     display: flex;
+    align-self: flex-start;
     content: ' ';
     width: 10px;
     height: 10px;
